# mem0-chrome-extension

./: .gitignore  manifest.json  package-lock.json  package.json
daemon/: README.md  pyproject.toml
daemon/app/: __init__.py  main.py
daemon/migrations/: 001_chat_capture_schema.sql
docs/plans/: browser-driving-openapi-investigation.md  chatgpt-capture-schema.md  implementation-roadmap.md  local-daemon-interfaces.md  project-rename-and-boundaries.md  provider-adapter-spec.md  rewrite-architecture-summary.md  testing-strategy.md
src/chatgpt/: capture_bridge.ts
