[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "browser-capture-daemon"
version = "0.1.0"
description = "Local daemon for browser capture and archive ingestion"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.112.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.8.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
]

[project.scripts]
capture-daemon = "app.main:main"
